05-networkPolicy/default-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: test-container
      image: busybox
      command:
        - sh
        - -c
      args:
        - |
          while true;
          do
            nslookup pizza-ordering-sys-svc.default.svc.cluster.local
          done;
