05-networkPolicy/dev-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---

apiVersion: v1
kind: Pod
metadata:
  name: dev-test-pod
  namespace: dev
spec:
  containers:
    - name: dev-test-container
      image: busybox
      command:
        - sh
        - -c
      args:
        - |
          while true; do
            echo -e "Testing connectivity...\n\n"
            if wget -T 3 -qO- http://pizza-ordering-sys-svc.default.svc.cluster.local; then
              echo -e "\n==================== Connection Allowed ====================== \n"
            else
              echo "\n==================== Blocked by NetworkPolicy ====================== \n"
            fi
            sleep 5
          done
