05-networkPolicy/default-deploy-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-ordering-sys
  labels:
    app: pizza-ordering-sys
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pizza-ordering-sys
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25
      maxSurge: 25
  template:
    metadata:
      name: pizza-ordering-sys-pod
      labels:
        app: pizza-ordering-sys
    spec:
      restartPolicy: Always
      containers:
        - name: pizza-ordering-sys-container
          image: liteshz/pizza-paradise:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1

---

apiVersion: v1
kind: Service
metadata:
  name: pizza-ordering-sys-svc
spec:
  type: ClusterIP
  selector:
    app: pizza-ordering-sys
  ports:
    - name: http
      port: 80
      targetPort: 80
