05-networkPolicy/pizza-paradise-app-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pizza-paradise-netpol
spec:
  podSelector: 
    matchLabels:
      app: pizza-ordering-sys
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: qa
          podSelector:
            matchLabels:
              app: qa-test-pod
      ports:
        - protocol: TCP
          port: 80
